fix bootstrap media text overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,7 @@
 body {
   background-color: rgb(245, 245, 245) !important;
 }
+
+.media-heading, .media-body > p, .media-body > span, .media-body {
+  word-break: break-all;
+}
